--- a/package.json
+++ b/package.json
@@ -2,6 +2,29 @@
   "dependencies": {
     "express": "^4.18.2",
     "git": "^0.1.5",
+    "mime": "^3.0.0",
     "mysql": "^2.18.1"
-  }
+  },
+  "name": "mapan",
+  "version": "1.0.0",
+  "description": "backend nodejs for mapan application",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/princejeanluc/mapan.git"
+  },
+  "keywords": [
+    "mapan",
+    "event",
+    "ticket"
+  ],
+  "author": "prince jean luc",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/princejeanluc/mapan/issues"
+  },
+  "homepage": "https://github.com/princejeanluc/mapan#readme"
 }
