--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.18.2",
     "git": "^0.1.5",
+    "jsonwebtoken": "^9.0.0",
     "mime": "^3.0.0",
     "mysql": "^2.18.1"
   },
