--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "git": "^0.1.5",
     "jsonwebtoken": "^9.0.0",
     "mime": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
   },
   "name": "mapan",
