--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "jsonwebtoken": "^9.0.0",
     "mime": "^3.0.0",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "sequelize": "^6.33.0"
   },
   "name": "mapan",
   "version": "1.0.0",
